--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "@playwright/test": "^1.48.1",
     "@types/node": "^22.7.9",
+    "csv-parse": "^5.5.6",
     "luxon": "^3.5.0"
   }
 }
