--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "devDependencies": {
     "@playwright/test": "^1.48.1",
     "@types/node": "^22.7.9",
+    "allure-commandline": "^2.32.0",
+    "allure-playwright": "^3.0.6",
     "csv-parse": "^5.5.6",
     "luxon": "^3.5.0"
   }
