--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@cucumber/cucumber": "^11.0.1",
     "@playwright/test": "^1.48.1",
     "@types/node": "^22.7.9",
     "allure-commandline": "^2.32.0",
     "allure-playwright": "^3.0.6",
     "csv-parse": "^5.5.6",
-    "luxon": "^3.5.0"
+    "luxon": "^3.5.0",
+    "ts-node": "^10.9.2"
   }
 }
