--- a/package.json
+++ b/package.json
@@ -2,19 +2,29 @@
   "name": "playwright",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "clean:reports": "rimraf allure-report allure-results && mkdirp allure-report allure-results",
+    "generate:reports": "allure serve .\\allure-results --clean",
+    "open:reports": "allure open .\\allure-report",
+    "execute:script": "npx playwright test loginTest.spec.ts --project=chromium",
+    "pretest": "npm run clean:reports",
+    "posttest": "npm run generate:reports && npm run open:reports",
+    "test": "npm run execute:script || npm run posttest"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
     "@cucumber/cucumber": "^11.0.1",
-    "@playwright/test": "^1.48.1",
+    "@playwright/test": "^1.48.2",
     "@types/node": "^22.7.9",
     "allure-commandline": "^2.32.0",
     "allure-playwright": "^3.0.6",
     "csv-parse": "^5.5.6",
     "luxon": "^3.5.0",
+    "mkdirp": "^3.0.1",
+    "rimraf": "^6.0.1",
     "ts-node": "^10.9.2"
   }
 }
